final spacing fix for mobile

--- a/static/less/splash.less
+++ b/static/less/splash.less
@@ -12,8 +12,6 @@ div.splashBanner {
     padding-top: 2em;
     padding-bottom: 2em;
 
-    margin-bottom: 1em;
-
     background-color: @background-lighter;
     box-shadow: 0 3px 3px @gray;
 
